--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,14 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+    background: rgb(228, 228, 228);
 }
-/* background: rgb(228, 228, 228); */
+
 
 img{
   object-fit: cover;
